app-deployment.green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
      version: green
  template:
    metadata:
      labels:
        app: springboot
        version: green
    spec:
      containers:
        - name: springboot
          image: 7720001490/employee-custom:v1  # Replace with your image name and tag
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: springboot-configmap
