deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: 7720001490/employee-custom:v1  # Replace with your image name and tag
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: springboot-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: default
spec:
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: LoadBalancer
