springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: webapps
spec:
  selector:
    app: springboot
    version: blue
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: LoadBalancer
